--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,15 +82,14 @@ jobs:
       - name: check esp32-hal (common features)
         run: cd esp32-hal/ && cargo check --examples --features=eh1,ufmt
       - name: check esp32-hal (async)
-        run: cd esp32-hal/ && cargo check --example=embassy_hello_world --features=embassy,embassy-time-timg0
-      - name: check esp32-hal (async, gpio)
-        run: cd esp32-hal/ && cargo check --example=embassy_wait --features=embassy,embassy-time-timg0,async
-      - name: check esp32-hal (async, spi)
-        run: cd esp32-hal/ && cargo check --example=embassy_spi --features=embassy,embassy-time-timg0,async
-      - name: check esp32-hal (async, serial)
-        run: cd esp32-hal/ && cargo check --example=embassy_serial --features=embassy,embassy-time-timg0,async
-      - name: check esp32-hal (async, i2c)
-        run: cd esp32-hal/ && cargo check --example=embassy_i2c --features=embassy,embassy-time-timg0,async
+        run: cd esp32-hal/ && cargo check --example=embassy_hello_world --features=embassy,embassy-time-timg0,embassy-executor-thread
+      - name: check esp32-hal (embassy, async)
+        run: |
+          cd esp32-hal/
+          cargo check --example=embassy_wait --features=embassy,embassy-time-timg0,async,embassy-executor-thread
+          cargo check --example=embassy_spi --features=embassy,embassy-time-timg0,async,embassy-executor-thread
+          cargo check --example=embassy_serial --features=embassy,embassy-time-timg0,async,embassy-executor-thread
+          cargo check --example=embassy_i2c --features=embassy,embassy-time-timg0,async,embassy-executor-thread
       # Ensure documentation can be built
       - name: rustdoc
         run: cd esp32-hal/ && cargo doc --features=eh1
@@ -315,17 +314,16 @@ jobs:
         run: cd esp32s2-hal/ && cargo check --examples --features=eh1,ufmt
       # FIXME: `time-systick` feature disabled for now, see 'esp32s2-hal/Cargo.toml'.
       # - name: check esp32s2-hal (async, systick)
-      #   run: cd esp32s2-hal/ && cargo check --example=embassy_hello_world --features=embassy,embassy-time-systick
+      #   run: cd esp32s2-hal/ && cargo check --example=embassy_hello_world --features=embassy,embassy-time-systick,executor
       - name: check esp32s2-hal (async, timg0)
-        run: cd esp32s2-hal/ && cargo check --example=embassy_hello_world --features=embassy,embassy-time-timg0
-      - name: check esp32s2-hal (async, gpio)
-        run: cd esp32s2-hal/ && cargo check --example=embassy_wait --features=embassy,embassy-time-timg0,async
-      - name: check esp32s2-hal (async, spi)
-        run: cd esp32s2-hal/ && cargo check --example=embassy_spi --features=embassy,embassy-time-timg0,async
-      - name: check esp32s2-hal (async, serial)
-        run: cd esp32s2-hal/ && cargo check --example=embassy_serial --features=embassy,embassy-time-timg0,async
-      - name: check esp32s2-hal (async, i2c)
-        run: cd esp32s2-hal/ && cargo check --example=embassy_i2c --features=embassy,embassy-time-timg0,async
+        run: cd esp32s2-hal/ && cargo check --example=embassy_hello_world --features=embassy,embassy-time-timg0,executor
+      - name: check esp32-hal (embassy, async)
+        run: |
+          cd esp32s2-hal/
+          cargo check --example=embassy_wait --features=embassy,embassy-time-timg0,async,embassy-executor-thread
+          cargo check --example=embassy_spi --features=embassy,embassy-time-timg0,async,embassy-executor-thread
+          cargo check --example=embassy_serial --features=embassy,embassy-time-timg0,async,embassy-executor-thread
+          cargo check --example=embassy_i2c --features=embassy,embassy-time-timg0,async,embassy-executor-thread
       # Ensure documentation can be built
       - name: rustdoc
         run: cd esp32s2-hal/ && cargo doc --features=eh1
@@ -355,17 +353,16 @@ jobs:
       - name: check esp32s3-hal (common features)
         run: cd esp32s3-hal/ && cargo check --examples --features=eh1,ufmt
       - name: check esp32s3-hal (async, systick)
-        run: cd esp32s3-hal/ && cargo check --example=embassy_hello_world --features=embassy,embassy-time-systick
+        run: cd esp32s3-hal/ && cargo check --example=embassy_hello_world --features=embassy,embassy-time-systick,executor
       - name: check esp32s3-hal (async, timg0)
-        run: cd esp32s3-hal/ && cargo check --example=embassy_hello_world --features=embassy,embassy-time-timg0
-      - name: check esp32s3-hal (async, gpio)
-        run: cd esp32s3-hal/ && cargo check --example=embassy_wait --features=embassy,embassy-time-timg0,async
-      - name: check esp32s3-hal (async, spi)
-        run: cd esp32s3-hal/ && cargo check --example=embassy_spi --features=embassy,embassy-time-timg0,async
-      - name: check esp32s3-hal (async, serial)
-        run: cd esp32s3-hal/ && cargo check --example=embassy_serial --features=embassy,embassy-time-timg0,async
-      - name: check esp32s3-hal (async, i2c)
-        run: cd esp32s3-hal/ && cargo check --example=embassy_i2c --features=embassy,embassy-time-timg0,async
+        run: cd esp32s3-hal/ && cargo check --example=embassy_hello_world --features=embassy,embassy-time-timg0,executor
+      - name: check esp32-hal (embassy, async)
+        run: |
+          cd esp32s3-hal/
+          cargo check --example=embassy_wait --features=embassy,embassy-time-timg0,async,embassy-executor-thread
+          cargo check --example=embassy_spi --features=embassy,embassy-time-timg0,async,embassy-executor-thread
+          cargo check --example=embassy_serial --features=embassy,embassy-time-timg0,async,embassy-executor-thread
+          cargo check --example=embassy_i2c --features=embassy,embassy-time-timg0,async,embassy-executor-thread
       - name: check esp32s3-hal (octal psram)
         run: cd esp32s3-hal/ && cargo check --example=octal_psram --features=opsram_2m --release # This example requires release!
       # Ensure documentation can be built
