--- a/esp32-hal/Cargo.toml
+++ b/esp32-hal/Cargo.toml
@@ -31,7 +31,9 @@ embassy-time   = { version = "0.1.3", features = ["nightly"], optional = true }
 [dev-dependencies]
 aes                = "0.8.3"
 critical-section   = "1.1.2"
-crypto-bigint      = { version = "0.5.2", default-features = false}
+crypto-bigint      = { version = "0.5.2", default-features = false }
+embassy-executor   = { version = "0.2.1", features = ["nightly"] }
+embassy-sync       = "0.2.0"
 embedded-graphics  = "0.8.1"
 embedded-hal-1     = { version = "=1.0.0-rc.1", package = "embedded-hal" }
 embedded-hal-async = "=1.0.0-rc.1"
@@ -83,6 +85,18 @@ required-features = ["eh1"]
 [[example]]
 name              = "embassy_hello_world"
 required-features = ["embassy", "embassy-executor-thread"]
+
+[[example]]
+name              = "embassy_multicore"
+required-features = ["embassy", "embassy-executor-thread"]
+
+[[example]]
+name              = "embassy_multicore_interrupt"
+required-features = ["embassy", "embassy-executor-interrupt"]
+
+[[example]]
+name              = "embassy_multiprio"
+required-features = ["embassy", "embassy-executor-interrupt"]
 
 [[example]]
 name              = "embassy_wait"
