--- a/esp32s2-hal/Cargo.toml
+++ b/esp32s2-hal/Cargo.toml
@@ -25,41 +25,39 @@ categories = [
 ]
 
 [dependencies]
-embassy-time                 = { version = "0.1.2", features = ["nightly"], optional = true }
-embedded-hal                 = { version = "0.2.7",  features = ["unproven"] }
-embedded-hal-1               = { version = "=1.0.0-alpha.11", optional = true, package = "embedded-hal" }
-embedded-hal-async           = { version = "=0.2.0-alpha.2", optional = true }
-embedded-hal-nb              = { version = "=1.0.0-alpha.3", optional = true }
-esp-hal-common               = { version = "0.11.0",  features = ["esp32s2"], path = "../esp-hal-common" }
-xtensa-atomic-emulation-trap = { version = "0.4.0" }
+esp-hal-common               = { version = "0.11.0", features = ["esp32s2"], path = "../esp-hal-common" }
+xtensa-atomic-emulation-trap = "0.4.0"
 
 [dev-dependencies]
-aes               = "0.8.3"
-critical-section  = "1.1.2"
-crypto-bigint     = { version = "0.5.2", default-features = false}
-embassy-executor  = { version = "0.2.0", features = ["nightly", "integrated-timers", "arch-xtensa", "executor-thread"] }
-embedded-graphics = "0.8.1"
-esp-alloc         = "0.3.0"
-esp-backtrace     = { version = "0.7.0", features = ["esp32s2", "panic-handler", "print-uart", "exception-handler"] }
-esp-hal-smartled  = { version = "0.4.0", features = ["esp32s2"], path = "../esp-hal-smartled" }
-esp-println       = { version = "0.5.0", features = ["esp32s2"] }
-lis3dh-async      = "0.7.0"
-sha2              = { version = "0.10.7", default-features = false}
-smart-leds        = "0.3.0"
-ssd1306           = "0.8.0"
-static_cell       = "1.2.0"
-usb-device        = "0.2.9"
-usbd-serial       = "0.1.1"
-heapless          = "0.7.16"
+aes                = "0.8.3"
+critical-section   = "1.1.2"
+crypto-bigint      = { version = "0.5.2", default-features = false}
+embassy-executor   = { version = "0.2.0", features = ["nightly", "integrated-timers", "arch-xtensa", "executor-thread"] }
+embassy-time       = { version = "0.1.2", features = ["nightly"] }
+embedded-graphics  = "0.8.1"
+embedded-hal-1     = { version = "=1.0.0-alpha.11", package = "embedded-hal" }
+embedded-hal-async = "=0.2.0-alpha.2"
+esp-alloc          = "0.3.0"
+esp-backtrace      = { version = "0.7.0", features = ["esp32s2", "panic-handler", "print-uart", "exception-handler"] }
+esp-hal-smartled   = { version = "0.4.0", features = ["esp32s2"], path = "../esp-hal-smartled" }
+esp-println        = { version = "0.5.0", features = ["esp32s2"] }
+heapless           = "0.7.16"
+lis3dh-async       = "0.7.0"
+sha2               = { version = "0.10.7", default-features = false}
+smart-leds         = "0.3.0"
+ssd1306            = "0.8.0"
+static_cell        = "1.2.0"
+usb-device         = "0.2.9"
+usbd-serial        = "0.1.1"
 
 [features]
 default   = ["rt", "vectored"]
 debug     = ["esp-hal-common/debug"]
-eh1       = ["esp-hal-common/eh1", "dep:embedded-hal-1", "dep:embedded-hal-nb"]
+eh1       = ["esp-hal-common/eh1"]
 rt        = []
 ufmt      = ["esp-hal-common/ufmt"]
 vectored  = ["esp-hal-common/vectored"]
-async     = ["esp-hal-common/async", "embedded-hal-async"]
+async     = ["esp-hal-common/async"]
 embassy   = ["esp-hal-common/embassy"]
 # FIXME:
 # - add 80_000_000 support to embassy time
