--- a/esp32-hal/Cargo.toml
+++ b/esp32-hal/Cargo.toml
@@ -26,7 +26,7 @@ categories = [
 
 [dependencies]
 esp-hal-common = { version = "0.11.0", features = ["esp32"], path = "../esp-hal-common" }
-embassy-time   = { version = "0.1.2", features = ["nightly"], optional = true }
+embassy-time   = { git = "https://github.com/embassy-rs/embassy", rev = "4f453d7", features = ["nightly"], optional = true }
 
 [dev-dependencies]
 aes                = "0.8.3"
@@ -34,14 +34,14 @@ critical-section   = "1.1.2"
 crypto-bigint      = { version = "0.5.2", default-features = false}
 embassy-executor   = { version = "0.2.0", features = ["nightly", "integrated-timers", "arch-xtensa", "executor-thread"] }
 embedded-graphics  = "0.8.1"
-embedded-hal-1     = { version = "=1.0.0-alpha.11", package = "embedded-hal" }
-embedded-hal-async = "=0.2.0-alpha.2"
+embedded-hal-1     = { version = "=1.0.0-rc.1", package = "embedded-hal" }
+embedded-hal-async = "=1.0.0-rc.1"
 esp-alloc          = "0.3.0"
 esp-backtrace      = { version = "0.7.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
 esp-hal-smartled   = { version = "0.4.0", features = ["esp32"], path = "../esp-hal-smartled" }
 esp-println        = { version = "0.5.0", features = ["esp32", "log"] }
 heapless           = "0.7.16"
-lis3dh-async       = "0.7.0"
+lis3dh-async       = { git = "https://github.com/jessebraham/lis3dh-rs-async", branch = "feature/eh-rc1" }
 sha2               = { version = "0.10.7", default-features = false}
 smart-leds         = "0.3.0"
 ssd1306            = "0.8.0"
